<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_light">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:background="@drawable/header_background_shape" />

        <TextView
            android:id="@+id/tv_plan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:text="@string/meal_schedule"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_plan_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="130dp"
            android:text="@string/plan_sentence"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />
    </FrameLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/solid_bg_item_profile">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mcv_selectionColor="@color/calendar_selection_color"
            app:mcv_arrowColor="@color/ic_arrow_back_and_forward"
            app:mcv_showOtherDates="all"
            app:mcv_headerTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:mcv_weekDayTextAppearance="@style/TextAppearance.AppCompat.Small" />
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_appointments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:paddingBottom="100dp"
            android:clipToPadding="false" />

        <LinearLayout
            android:id="@+id/layout_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone">


            <TextView
                android:id="@+id/tv_no_appointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/no_meals_planned"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/gray_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="65dp"
                android:text="@string/select_date_hint"
                android:textSize="14sp"
                android:textColor="@color/gray_text_light" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
